src/objects/Assesments__c.object
<CustomObject>
    <fields>
        <fullName>Executive_Apps__c</fullName>
        <label>Executive Apps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Profile</fullName>
                </value>
                <value>
                    <fullName>Corporate Performance</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>HR Executive Workbench</fullName>
                </value>
                <value>
                    <fullName>Sales Executive Workbench</fullName>
                </value>
                <value>
                    <fullName>Finance Executive Workbench</fullName>
                </value>
                <value>
                    <fullName>Marketing Executive Workbench</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_Advisory_Solution_Engagements__c</fullName>
        <formula>IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Self Service Starter Program&quot;), &quot;Self Service Starter Program&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Application Blueprint Workshop&quot;), &quot;Application Blueprint Workshop&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Mobile Roadmap&quot;), &quot;Mobile Roadmap&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Upgrade Oversight and Support&quot;), &quot;Upgrade Oversight and Support&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Expert Advisory and Audit Services&quot;), &quot;Expert Advisory and Audit Services&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Administration and Governance&quot;), &quot;Administration and Governance&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Advisory Services: Mobile Information App Development&quot;), &quot;Advisory Services: Mobile Information App Development&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Analytics SDK Customization&quot;), &quot;Analytics SDK Customization&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Advanced Analytics&quot;), &quot;Advanced Analytics&quot; + BR(),Null) +
IF(INCLUDES(Advisory_Solution_Engagements__c, &quot;Integration with Big Data Sources (Hadoop)&quot;), &quot;Integration with Big Data Sources (Hadoop)&quot; + BR(),Null)</formula>
        <label>Advisory Solution Engagements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Banking_Apps__c</fullName>
        <formula>IF(INCLUDES(Banking_Apps__c, &quot;Accounting and Finance&quot;), &quot;Accounting and Finance&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Asset Management and Servicing&quot;), &quot;Asset Management and Servicing&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Retail Banking&quot;), &quot;Retail Banking&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Commercial and Business Banking&quot;), &quot;Commercial and Business Banking&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Risk Management&quot;), &quot;Risk Management&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Treasury and Capital Markets&quot;), &quot;Treasury and Capital Markets&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Compliance and Audit&quot;), &quot;Compliance and Audit&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Customer Relationship Management&quot;), &quot;Customer Relationship Management&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Digital Banking Card&quot;), &quot;Digital Banking Card&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Secure Access with Digital Badge&quot;), &quot;Secure Access with Digital Badge&quot; + BR(),Null) +
IF(INCLUDES(Banking_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Banking Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Challengers__c</fullName>
        <formula>IF(INCLUDES(Challengers__c, &quot;Tableau&quot;), &quot;Tableau&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;DOMO&quot;), &quot;DOMO&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Microsoft Power BI&quot;), &quot;Microsoft Power BI&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Qlik&quot;), &quot;Qlik&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;SAP&quot;), &quot;SAP&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;IBM Cognos&quot;), &quot;IBM Cognos&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Oracle OBIEE&quot;), &quot;Oracle OBIEE&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;SAS&quot;), &quot;SAS&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Salesforce Wave&quot;), &quot;Salesforce Wave&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Tibco&quot;), &quot;Tibco&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Birst&quot;), &quot;Birst&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Pentaho&quot;), &quot;Pentaho&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Pyramid Analytics&quot;), &quot;Pyramid Analytics&quot; + BR(),Null) +
IF(INCLUDES(Challengers__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Challengers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Client__c</fullName>
        <formula>IF(INCLUDES(Client__c, &quot;(001.000) PC - Windows&quot;), &quot;(001.000) PC - Windows&quot; + BR(),Null) +
IF(INCLUDES(Client__c, &quot;(002.000) PC - Mac&quot;), &quot;(002.000) PC - Mac&quot; + BR(),Null) +
IF(INCLUDES(Client__c, &quot;(004.000) M - iOS&quot;), &quot;(004.000) M - iOS&quot; + BR(),Null) +
IF(INCLUDES(Client__c, &quot;(005.000) M - Android&quot;), &quot;(005.000) M - Android&quot; + BR(),Null) +
IF(INCLUDES(Client__c, &quot;(006.000) M - Windows&quot;), &quot;(006.000) M - Windows&quot; + BR(),Null) +
IF(INCLUDES(Client__c, &quot;(007.000) Web&quot;), &quot;(007.000) Web&quot; + BR(),Null) +
IF(INCLUDES(Client__c, &quot;(008.000) Office&quot;), &quot;(008.000) Office&quot; + BR(),Null) +
IF(INCLUDES(Client__c, &quot;(009.000) Client SDK&quot;), &quot;(009.000) Client SDK&quot; + BR(),Null)</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Cloud_Solution_Engagements__c</fullName>
        <formula>IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Migration and Administration&quot;), &quot;Migration and Administration&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;ETL Setup, Development, and Administration&quot;), &quot;ETL Setup, Development, and Administration&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Data Warehouse Setup&quot;), &quot;Data Warehouse Setup&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Data Warehouse Support&quot;), &quot;Data Warehouse Support&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Network/Connectivity Setup and Support (VPN/VPC)&quot;), &quot;Network/Connectivity Setup and Support (VPN/VPC)&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;SS0/LDAP Setup and Configuration&quot;), &quot;SS0/LDAP Setup and Configuration&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Upgrade Service&quot;), &quot;Upgrade Service&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Migration Service&quot;), &quot;Migration Service&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Annual Health Check&quot;), &quot;Annual Health Check&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Technical Account Manager&quot;), &quot;Technical Account Manager&quot; + BR(),Null) +
IF(INCLUDES(Cloud_Solution_Engagements__c, &quot;Assigned Support Engineer&quot;), &quot;Assigned Support Engineer&quot; + BR(),Null)</formula>
        <label>Cloud Solution Engagements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Curriculum__c</fullName>
        <formula>IF(INCLUDES(Curriculum__c, &quot;App Creation/Maintenance&quot;), &quot;App Creation/Maintenance&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Advanced Analytics&quot;), &quot;Advanced Analytics&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;System Performance/Stability&quot;), &quot;System Performance/Stability&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Enterprise Security Model Design&quot;), &quot;Enterprise Security Model Design&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Application Troubleshooting&quot;), &quot;Application Troubleshooting&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Web to Mobile App Conversion&quot;), &quot;Web to Mobile App Conversion&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Secure Cloud Migration&quot;), &quot;Secure Cloud Migration&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Custom Web Applications&quot;), &quot;Custom Web Applications&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Custom Mobile Applications&quot;), &quot;Custom Mobile Applications&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Enterprise Reports&quot;), &quot;Enterprise Reports&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Enterprise Gateways&quot;), &quot;Enterprise Gateways&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Database Optimization&quot;), &quot;Database Optimization&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Big Data Analytics&quot;), &quot;Big Data Analytics&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;Report Creation&quot;), &quot;Report Creation&quot; + BR(),Null) +
IF(INCLUDES(Curriculum__c, &quot;MicroStrategy Web Dashboards&quot;), &quot;MicroStrategy Web Dashboards&quot; + BR(),Null)</formula>
        <label>Curriculum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Customer_Support_Apps__c</fullName>
        <formula>IF(INCLUDES(Customer_Support_Apps__c, &quot;Customer 360 Analysis&quot;), &quot;Customer 360 Analysis&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Closed Case Inspection&quot;), &quot;Closed Case Inspection&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Call Center Analytics&quot;), &quot;Call Center Analytics&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Customer Sentiment Analysis&quot;), &quot;Customer Sentiment Analysis&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Customer Service Workbench&quot;), &quot;Customer Service Workbench&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Service Team Performance&quot;), &quot;Service Team Performance&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Field Agent Automation&quot;), &quot;Field Agent Automation&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Customer Self Service&quot;), &quot;Customer Self Service&quot; + BR(),Null) +
IF(INCLUDES(Customer_Support_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Customer Support Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Enterprise_Assets__c</fullName>
        <formula>IF(INCLUDES(Enterprise_Assets__c, &quot;(100.000) RDBMS&quot;), &quot;(100.000) RDBMS&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(101.000) OLAP&quot;), &quot;(101.000) OLAP&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(102.000) Big Data&quot;), &quot;(102.000) Big Data&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(103.000) Local Data&quot;), &quot;(103.000) Local Data&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(104.000) Cloud Data&quot;), &quot;(104.000) Cloud Data&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(105.000) Enterprise BI&quot;), &quot;(105.000) Enterprise BI&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(106.000) Remote Data&quot;), &quot;(106.000) Remote Data&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(107.000) ETL / DS&quot;), &quot;(107.000) ETL / DS&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(108.000) Statistical&quot;), &quot;(108.000) Statistical&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(109.000) Directory&quot;), &quot;(109.000) Directory&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(110.000) Network&quot;), &quot;(110.000) Network&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(111.000) EMM&quot;), &quot;(111.000) EMM&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(112.000) Server&quot;), &quot;(112.000) Server&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(113.000) Charting&quot;), &quot;(113.000) Charting&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(114.000) Mapping&quot;), &quot;(114.000) Mapping&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(115.000) Media&quot;), &quot;(115.000) Media&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(116.000) PACS&quot;), &quot;(116.000) PACS&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(117.000) CMS&quot;), &quot;(117.000) CMS&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(118.000) Enterprise Apps&quot;), &quot;(118.000) Enterprise Apps&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(119.000) Cloud Apps&quot;), &quot;(119.000) Cloud Apps&quot; + BR(),Null) +
IF(INCLUDES(Enterprise_Assets__c, &quot;(120.000) Enterprise Assets&quot;), &quot;(120.000) Enterprise Assets&quot; + BR(),Null)</formula>
        <label>Enterprise Assets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Enterprise_Solutions__c</fullName>
        <formula>IF(INCLUDES(Enterprise_Solutions__c, &quot;Apple&quot;), &quot;Apple&quot; + BR(),Null) 
+ 
IF(INCLUDES(Enterprise_Solutions__c, &quot;AWS&quot;), &quot;AWS&quot; + BR(),Null) 
+ 
IF(INCLUDES(Enterprise_Solutions__c, &quot;Cloudera&quot;), &quot;Cloudera&quot; + BR(),Null) 
+ 
IF(INCLUDES(Enterprise_Solutions__c, &quot;Microsoft&quot;), &quot;Microsoft&quot; + BR(),Null) 
+ 
IF(INCLUDES(Enterprise_Solutions__c, &quot;Oracle&quot;), &quot;Oracle&quot; + BR(),Null) 
+ 
IF(INCLUDES(Enterprise_Solutions__c, &quot;SAP&quot;), &quot;SAP&quot; + BR(),Null) 
+ 
IF(INCLUDES(Enterprise_Solutions__c, &quot;SFDC&quot;), &quot;SFDC&quot; + BR(),Null)</formula>
        <label>Enterprise Solutions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Executive_Apps__c</fullName>
        <formula>IF(INCLUDES(Executive_Apps__c, &quot;Customer Profile&quot;), &quot;Customer Profile&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;Corporate Performance&quot;), &quot;Corporate Performance&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;Risk Management&quot;), &quot;Risk Management&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;Brand Awareness&quot;), &quot;Brand Awareness&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;HR Executive Workbench&quot;), &quot;HR Executive Workbench&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;Sales Executive Workbench&quot;), &quot;Sales Executive Workbench&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;Finance Executive Workbench&quot;), &quot;Finance Executive Workbench&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;Marketing Executive Workbench&quot;), &quot;Marketing Executive Workbench&quot; + BR(),Null) +
IF(INCLUDES(Executive_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Executive Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Facilities_Apps__c</fullName>
        <formula>IF(INCLUDES(Facilities_Apps__c, &quot;Employee Badges&quot;), &quot;Employee Badges&quot; + BR(),Null) +
IF(INCLUDES(Facilities_Apps__c, &quot;Facilities Access Management&quot;), &quot;Facilities Access Management&quot; + BR(),Null) +
IF(INCLUDES(Facilities_Apps__c, &quot;Visitor Badges&quot;), &quot;Visitor Badges&quot; + BR(),Null) +
IF(INCLUDES(Facilities_Apps__c, &quot;Workspace utilization and planning&quot;), &quot;Workspace utilization and planning&quot; + BR(),Null) +
IF(INCLUDES(Facilities_Apps__c, &quot;Facility Capacity Forecasting&quot;), &quot;Facility Capacity Forecasting&quot; + BR(),Null) +
IF(INCLUDES(Facilities_Apps__c, &quot;Facility Staff Safety and Emergency Response&quot;), &quot;Facility Staff Safety and Emergency Response&quot; + BR(),Null) +
IF(INCLUDES(Facilities_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Facilities Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Finance_Apps__c</fullName>
        <formula>IF(INCLUDES(Finance_Apps__c, &quot;Planning &amp; Forecasting&quot;), &quot;Planning &amp; Forecasting&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;Profitability Analysis&quot;), &quot;Profitability Analysis&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;Automated Reporting&quot;), &quot;Automated Reporting&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;Risk Management&quot;), &quot;Risk Management&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;CFO Workbench&quot;), &quot;CFO Workbench&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;Performance Reporting&quot;), &quot;Performance Reporting&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;Remote Audit&quot;), &quot;Remote Audit&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;Expense Analysis&quot;), &quot;Expense Analysis&quot; + BR(),Null) +
IF(INCLUDES(Finance_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Finance Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Functional_Solutions__c</fullName>
        <formula>IF(INCLUDES(Functional_Solutions__c, &quot;Sales&quot;), &quot;Sales&quot; + BR(),Null) 
+ 
IF(INCLUDES(Functional_Solutions__c, &quot;Facilities&quot;), &quot;Facilities&quot; + BR(),Null) 
+ 
IF(INCLUDES(Functional_Solutions__c, &quot;Finance&quot;), &quot;Finance&quot; + BR(),Null) 
+ 
IF(INCLUDES(Functional_Solutions__c, &quot;HR&quot;), &quot;HR&quot; + BR(),Null) 
+ 
IF(INCLUDES(Functional_Solutions__c, &quot;Marketing&quot;), &quot;Marketing&quot; + BR(),Null) 
+ 
IF(INCLUDES(Functional_Solutions__c, &quot;Executive&quot;), &quot;Executive&quot; + BR(),Null) 
+ 
IF(INCLUDES(Functional_Solutions__c, &quot;Customer Support&quot;), &quot;Customer Support&quot; + BR(),Null)</formula>
        <label>Functional Solutions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_HR_Apps__c</fullName>
        <formula>IF(INCLUDES(HR_Apps__c, &quot;Employee Retention&quot;), &quot;Employee Retention&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;Career Development&quot;), &quot;Career Development&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;Compensation Analysis&quot;), &quot;Compensation Analysis&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;Cost of Benefits&quot;), &quot;Cost of Benefits&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;Talent Management&quot;), &quot;Talent Management&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;Staffing Analysis&quot;), &quot;Staffing Analysis&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;HR Workbench&quot;), &quot;HR Workbench&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;Workforce Productivity&quot;), &quot;Workforce Productivity&quot; + BR(),Null) +
IF(INCLUDES(HR_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>HR Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Healthcare_Apps__c</fullName>
        <formula>IF(INCLUDES(Healthcare_Apps__c, &quot;Hospital Operations&quot;), &quot;Hospital Operations&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Revenue Cycle Optimization&quot;), &quot;Revenue Cycle Optimization&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Doctor Performance&quot;), &quot;Doctor Performance&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Mobile Care Delivery&quot;), &quot;Mobile Care Delivery&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Hospital Performance&quot;), &quot;Hospital Performance&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Claims Analysis&quot;), &quot;Claims Analysis&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Patient Centered Medical Home&quot;), &quot;Patient Centered Medical Home&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Fraud and Abuse Analysis&quot;), &quot;Fraud and Abuse Analysis&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Digital Staff Badges&quot;), &quot;Digital Staff Badges&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Digital Patient ID Badge&quot;), &quot;Digital Patient ID Badge&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Supply Chain Management&quot;), &quot;Supply Chain Management&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Population Health Management&quot;), &quot;Population Health Management&quot; + BR(),Null) +
IF(INCLUDES(Healthcare_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Healthcare Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Higher_Ed_Apps__c</fullName>
        <formula>IF(INCLUDES(Higher_Ed_Apps__c, &quot;Admissions and Enrollment&quot;), &quot;Admissions and Enrollment&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Course Offering Planning and Forecasting&quot;), &quot;Course Offering Planning and Forecasting&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Academic Advising&quot;), &quot;Academic Advising&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Student ID Card&quot;), &quot;Student ID Card&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Staff and Visitor ID Card&quot;), &quot;Staff and Visitor ID Card&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Safety and Emergency Response&quot;), &quot;Safety and Emergency Response&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Operations Manager for Resource Planning&quot;), &quot;Operations Manager for Resource Planning&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Vendor Portal&quot;), &quot;Vendor Portal&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Grants Management&quot;), &quot;Grants Management&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Development and Engagement&quot;), &quot;Development and Engagement&quot; + BR(),Null) +
IF(INCLUDES(Higher_Ed_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Higher Ed Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Incumbents__c</fullName>
        <formula>IF(INCLUDES(Incumbents__c, &quot;Tableau&quot;), &quot;Tableau&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;DOMO&quot;), &quot;DOMO&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Microsoft Power BI&quot;), &quot;Microsoft Power BI&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Qlik&quot;), &quot;Qlik&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;SAP&quot;), &quot;SAP&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;IBM Cognos&quot;), &quot;IBM Cognos&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Oracle OBIEE&quot;), &quot;Oracle OBIEE&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;SAS&quot;), &quot;SAS&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Salesforce Wave&quot;), &quot;Salesforce Wave&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Tibco&quot;), &quot;Tibco&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Birst&quot;), &quot;Birst&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Pentaho&quot;), &quot;Pentaho&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Pyramid Analytics&quot;), &quot;Pyramid Analytics&quot; + BR(),Null) +
IF(INCLUDES(Incumbents__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Incumbents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Industry_Solutions__c</fullName>
        <formula>IF(INCLUDES(Industry_Solutions__c, &quot;Retail&quot;), &quot;Retail&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Banking&quot;), &quot;Banking&quot; + BR(),Null)
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Municipal Government&quot;), &quot;Municipal Government&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Higher Education&quot;), &quot;Higher Education&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Healthcare&quot;), &quot;Healthcare&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Manufacturing / CPG&quot;), &quot;Manufacturing / CPG&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Federal Government&quot;), &quot;Federal Government&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;State Government&quot;), &quot;State Government&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Food and Beverage&quot;), &quot;Food and Beverage&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Insurance&quot;), &quot;Insurance&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Hospitality&quot;), &quot;Hospitality&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Biotech and Pharma&quot;), &quot;Biotech and Pharma&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Telecommunications&quot;), &quot;Telecommunications&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Media&quot;), &quot;Media&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Transportation &amp; Logistics&quot;), &quot;Transportation &amp; Logistics&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Technology&quot;), &quot;Technology&quot; + BR(),Null) 
+ 
IF(INCLUDES(Industry_Solutions__c, &quot;Oil &amp; Gas&quot;), &quot;Oil &amp; Gas&quot; + BR(),Null)</formula>
        <label>Industry Solutions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Manufacturing_CPG_Apps__c</fullName>
        <formula>IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Orders and Shipments&quot;), &quot;Orders and Shipments&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Cost Management&quot;), &quot;Cost Management&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Real-time Monitoring&quot;), &quot;Real-time Monitoring&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Operational and Financial Analysis&quot;), &quot;Operational and Financial Analysis&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Big Data - Quality Improvement&quot;), &quot;Big Data - Quality Improvement&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Data Discovery – Planning and Forecasting&quot;), &quot;Data Discovery – Planning and Forecasting&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Staff Safety and Emergency Response&quot;), &quot;Staff Safety and Emergency Response&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Financial Management&quot;), &quot;Financial Management&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Sales and Marketing Analysis&quot;), &quot;Sales and Marketing Analysis&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Supply Chain Management&quot;), &quot;Supply Chain Management&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Digital Badge for Enterprise&quot;), &quot;Digital Badge for Enterprise&quot; + BR(),Null) +
IF(INCLUDES(Manufacturing_CPG_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Manufacturing/CPG Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Marketing_Apps__c</fullName>
        <formula>IF(INCLUDES(Marketing_Apps__c, &quot;Campaign Analysis&quot;), &quot;Campaign Analysis&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Customer Segmentation&quot;), &quot;Customer Segmentation&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Demand Generation&quot;), &quot;Demand Generation&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Customer Satisfaction&quot;), &quot;Customer Satisfaction&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Digital Marketing Performance&quot;), &quot;Digital Marketing Performance&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Social Media Effectiveness&quot;), &quot;Social Media Effectiveness&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Brand Sentiment&quot;), &quot;Brand Sentiment&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Marketing Operations&quot;), &quot;Marketing Operations&quot; + BR(),Null) +
IF(INCLUDES(Marketing_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Marketing Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Municipal_Gov_Apps__c</fullName>
        <formula>IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Agency Performance&quot;), &quot;Agency Performance&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Public Safety&quot;), &quot;Public Safety&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Licensing &amp; Inspection&quot;), &quot;Licensing &amp; Inspection&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Education Planning&quot;), &quot;Education Planning&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Public Health Management&quot;), &quot;Public Health Management&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Citizen Engagement / Infrastructure Optimization&quot;), &quot;Citizen Engagement / Infrastructure Optimization&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Fleet Management&quot;), &quot;Fleet Management&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Municipal Transportation&quot;), &quot;Municipal Transportation&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Staff Digital Badges&quot;), &quot;Staff Digital Badges&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Economic Development and Urban Planning&quot;), &quot;Economic Development and Urban Planning&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;eGovernment Services Badge&quot;), &quot;eGovernment Services Badge&quot; + BR(),Null) +
IF(INCLUDES(Municipal_Gov_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Municipal Gov Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Platform_Solution_Engagements__c</fullName>
        <formula>IF(INCLUDES(Platform_Solution_Engagements__c, &quot;MicroStrategy Installation&quot;), &quot;MicroStrategy Installation&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Capacity Planning&quot;), &quot;Capacity Planning&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Performance Tuning&quot;), &quot;Performance Tuning&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Health Assessment&quot;), &quot;Health Assessment&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Upgrade Assessment&quot;), &quot;Upgrade Assessment&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Upgrade to Latest Version&quot;), &quot;Upgrade to Latest Version&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Business Objects Conversion&quot;), &quot;Business Objects Conversion&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Cognos Conversion&quot;), &quot;Cognos Conversion&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Mobile and Web UX Design&quot;), &quot;Mobile and Web UX Design&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Information App Development&quot;), &quot;Information App Development&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;User Interface Design&quot;), &quot;User Interface Design&quot; + BR(),Null) 
+ 
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Mobile Infrastructure Set Up and Rebranding&quot;), &quot;Mobile Infrastructure Set Up and Rebranding&quot; + BR(),Null) 
+
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Web to Mobile Application Adaptation&quot;), &quot;Web to Mobile Application Adaptation&quot; + BR(),Null) 
+
IF(INCLUDES(Platform_Solution_Engagements__c, &quot;Testing Services&quot;), &quot;Testing Services&quot; + BR(),Null)</formula>
        <label>Platform Solution Engagements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Repository_Applications__c</fullName>
        <formula>IF(INCLUDES(Repository_Applications__c, &quot;(033.000) Project&quot;), &quot;(033.000) Project&quot; + BR(),Null) +
IF(INCLUDES(Repository_Applications__c, &quot;(032.000) Custom Application&quot;), &quot;(032.000) Custom Application&quot; + BR(),Null) +
IF(INCLUDES(Repository_Applications__c, &quot;(031.000) Wallet&quot;), &quot;(031.000) Wallet&quot; + BR(),Null)</formula>
        <label>Repository: Applications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Repository_Documents__c</fullName>
        <formula>IF(INCLUDES(Repository_Documents__c, &quot;(040.000) Report&quot;), &quot;(040.000) Report&quot; + BR(),Null) +
IF(INCLUDES(Repository_Documents__c, &quot;(041.000) Grid&quot;), &quot;(041.000) Grid&quot; + BR(),Null) +
IF(INCLUDES(Repository_Documents__c, &quot;(042.000) Map&quot;), &quot;(042.000) Map&quot; + BR(),Null) +
IF(INCLUDES(Repository_Documents__c, &quot;(043.000) Chart&quot;), &quot;(043.000) Chart&quot; + BR(),Null) +
IF(INCLUDES(Repository_Documents__c, &quot;(044.000) Visualization&quot;), &quot;(044.000) Visualization&quot; + BR(),Null) +
IF(INCLUDES(Repository_Documents__c, &quot;(045.000) Dashboard&quot;), &quot;(045.000) Dashboard&quot; + BR(),Null) +
IF(INCLUDES(Repository_Documents__c, &quot;(046.000) Badge&quot;), &quot;(046.000) Badge&quot; + BR(),Null) +
IF(INCLUDES(Repository_Documents__c, &quot;(047.000) Form&quot;), &quot;(047.000) Form&quot; + BR(),Null)</formula>
        <label>Repository: Documents</label>
        <type>Text</type>
    </fields>
</CustomObject>